--- a/figma.html
+++ b/figma.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
+
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light p-3">
         <div class="container">
@@ -92,12 +92,12 @@
                     </div>
                     <hr class="my-5" />
                     <div class="container row align-items-center mb-3 mb-md-0">
-                        <div class="p-0">
+                        <div class="p-0 d-flex justify-content-center justify-content-md-start">
                             <p class="fs-5">
                                 Lorem <strong>ipsum dolor</strong> sit amet
                             </p>
                         </div>
-                        <div class="mt-2 download">
+                        <div class="mt-2 download d-flex justify-content-center justify-content-md-start">
                             <a href="https://apps.apple.com/">
                                 <img class="download" src="https://i.postimg.cc/g2Mnwm0n/appstore-badge.png"
                                     alt="Pobierz w App Store" />
@@ -110,93 +110,199 @@
                     </div>
                 </div>
                 <div class="col-md-6">
-                        <div id="carouselControls" class="carousel slide">
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
+                    <div id="carouselControls" class="carousel slide">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
                                     class="d-block carousel-img" alt="..." />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
-                                    class="d-block carousel-img" alt="..." />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
-                                    class="d-block carousel-img" alt="..." />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
-                                    class="d-block carousel-img" alt="..." />
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
-                                    class="d-block carousel-img" alt="..." />
-                                </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls"
-                                    data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselControls"
-                                    data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
                             </div>
-                            <div class="m-3">
-                                <h4>Automatyzacja procesów</h4>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                                eiusmod.
+                            <div class="carousel-item">
+                                <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
+                                    class="d-block carousel-img" alt="..." />
                             </div>
-                            <div class="carousel-indicators d-flex justify-content-start m-3">
-                                <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="0" class="active"
-                                    aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="1"
-                                    aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="2"
-                                    aria-label="Slide 3"></button>
-                                <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="3"
-                                    aria-label="Slide 4"></button>
-                                <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="4"
-                                    aria-label="Slide 5"></button>
+                            <div class="carousel-item">
+                                <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
+                                    class="d-block carousel-img" alt="..." />
                             </div>
+                            <div class="carousel-item">
+                                <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
+                                    class="d-block carousel-img" alt="..." />
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
+                                    class="d-block carousel-img" alt="..." />
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselControls"
+                                data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                        <div class="m-3">
+                            <h4>Automatyzacja procesów</h4>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod.
+                        </div>
+                        <div class="carousel-indicators d-flex justify-content-start m-3">
+                            <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="0" class="active"
+                                aria-current="true" aria-label="Slide 1"></button>
+                            <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="1"
+                                aria-label="Slide 2"></button>
+                            <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="2"
+                                aria-label="Slide 3"></button>
+                            <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="3"
+                                aria-label="Slide 4"></button>
+                            <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="4"
+                                aria-label="Slide 5"></button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Second section -->
-    <div class="container my-5">
+    <div class="container p-4">
         <h2 class="fw-bold my-5">Zawsze gotowi, by pomóc. 24/7 wsparcie techniczne</h2>
         <p class="w-100">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
-          gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices
+            gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua.
         </p>
-      </div>
-      <div class="container my-5">
-        <div class="row">
-          <!-- Pojedynczy blok (kolumna) -->
-          <div class="col-md-4 mb-4 p-0">
-            <div class="d-flex">
-              <img src="ikona-check.svg" alt="" class="me-2" />
-              <div>
-                <h5>Zaawansowana analityka</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
-              </div>
+    </div>
+    <!-- Third section -->
+    <div class="container my-5">
+        <div class="d-flex flex-wrap">
+            <div class="col-md-6 mb-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle-check me-2 fs-3" style="color: #625cff;"></i>
+                    <div>
+                        <h5>Zaawansowana analityka</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
+                        <hr />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle-check me-2 fs-3" style="color: #625cff;"></i>
+                    <div>
+                        <h5>Zaawansowana analityka</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
+                        <hr />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle-check me-2 fs-3" style="color: #625cff;"></i>
+                    <div>
+                        <h5>Zaawansowana analityka</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
+                        <hr />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle-check me-2 fs-3" style="color: #625cff;"></i>
+                    <div>
+                        <h5>Zaawansowana analityka</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
+                        <hr />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle-check me-2 fs-3" style="color: #625cff;"></i>
+                    <div>
+                        <h5>Zaawansowana analityka</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
+                        <hr />
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4 p-0">
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle-check me-2 fs-3" style="color: #625cff;"></i>
+                    <div>
+                        <h5>Zaawansowana analityka</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod </p>
+                        <hr />
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr />
+    </div>
+    <!-- Fourth section -->
+    <div class="container my-5">
+        <div class="row align-items-center justify-content-between">
+            <!-- Lewa kolumna: nagłówek -->
+            <div class="col-lg-4 col-md-12">
+                <h2>Bezpieczne i skalowalne oprogramowanie dla instytucji finansowych</h2>
+            </div>
+            <!-- Prawa kolumna: loga -->
+            <div class="col-lg-8 col-md-12 d-flex gap-3 justify-content-center flex-wrap">
+                <div class="rounded background-grey logo-square">logo</div>
+                <div class="rounded background-grey logo-square">logo</div>
+                <div class="rounded background-grey logo-square">logo</div>
+                <div class="rounded background-grey logo-square">logo</div>
+            </div>
+        </div>
+        <hr />
+    </div>
+    <!-- Fith section -->
+    <div class="container my-5">
+        <div class="row align-items-center">
+          <!-- Miniaturka wideo -->
+          <div class="col-md-6 mb-4 mb-md-0">
+            <div class="position-relative" style="border-radius: 12px; overflow: hidden;">
+              <!-- Obrazek tła wideo -->
+              <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg" 
+                   class="img-fluid player" 
+                   alt="Podgląd wideo" 
+                   style="border-radius: 12px;">
+              <!-- Przycisk Play -->
+              <button class="btn position-absolute top-50 start-50 translate-middle"
+                      style="border-radius: 50%; 
+                             background-color: #fff; 
+                             width: 64px; 
+                             height: 64px; 
+                             box-shadow: 0 2px 8px rgba(0,0,0,0.2);"
+                      onclick="/* Tutaj akcja*/">
+                <i class="fa fa-play" style="font-size: 24px;"></i>
+              </button>
             </div>
           </div>
-          <!-- Kolejne kolumny analogicznie -->
+          <!-- Tekst obok -->
+          <div class="col-md-6">
+            <h2>Poznaj system</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+              tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse 
+              ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
+            </p>
+          </div>
         </div>
-      </div>
+        <hr />
+    </div>
+    <div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/b0e0222d09.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
