--- a/figma.html
+++ b/figma.html
@@ -294,11 +294,91 @@
             </p>
           </div>
         </div>
-        <hr />
     </div>
-    <div>
+    <div class="my-5 bg-light">
+        <div class="container">
+            <div class="row align-items-center">
+              <!-- Lewa kolumna: nagłówki i przycisk -->
+              <div class="col-md-6 mb-4 mb-md-0">
+                <h2>Zaufali nam liderzy branży finansowej</h2>
+                <p class="fw-bold"><h4>Wypróbuj naszą platformę za darmo!</h4></p>
+                <p class="my-5">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+                <button class="btn btn-dark btn-lg p-3"><i class="fa-solid fa-calendar-days me-3"></i>Zarezerwuj wprowadzenie demo</button>
+              </div>
+              <!-- Prawa kolumna: placeholder obrazu -->
+              <div class="col-md-6 d-flex justify-content-center background-darkgrey">
+                <div class="background-darkgrey d-flex align-items-center justify-content-center demo-reservation-photo">
+                  <i class="fa-solid fa-image fs-1 text-muted"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
-    </div>
+        <div class="container my-5">
+            <h2 class="mb-4">Blog</h2>
+          
+            <!-- Pojedynczy wpis -->
+            <div class="row mb-4 align-items-center">
+              <!-- Miniatura wpisu -->
+              <div class="col-auto">
+                <div class="blog-box  me-5"></div>
+              </div>
+              <!-- Tytuł, autor, data -->
+              <div class="col">
+                <h5 class="mb-1">Przyszłość: Jak Nowoczesne Oprogramowanie Zmienia Sektor Finansowy</h5>
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle fs-4 pe-3" style="color: #f5f5f5;"></i>
+                    <small class="text-muted">Led Zeppelin | 13 lipca 2021</small>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <div class="row mb-4 align-items-center">
+              <div class="col-auto">
+                <div class="blog-box  me-5"></div>
+              </div>
+              <div class="col">
+                <h5 class="mb-1">Bezpieczeństwo w Bankowości Cyfrowej — Jak Chronimy Twoje Dane?</h5>
+                <div class="d-flex">
+                    <i class="fa-solid fa-circle fs-4 pe-3" style="color: #f5f5f5;"></i>
+                    <small class="text-muted">Bruce Dickinson | 6 czerwca 2021</small>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <div class="row mb-4 align-items-center">
+                <div class="col-auto">
+                    <div class="blog-box  me-5"></div>
+                </div>
+                <div class="col">
+                  <h5 class="mb-1">API w finansach – klucz do innowacji</h5>
+                  <div class="d-flex">
+                      <i class="fa-solid fa-circle fs-4 pe-3" style="color: #f5f5f5;"></i>
+                      <small class="text-muted">Steve Harris  |  31 marca 2024</small>
+                  </div>
+                </div>
+              </div>
+              <hr />
+              <div class="row mb-4 align-items-center">
+                <div class="col-auto">
+                  <div class="blog-box  me-5"></div>
+                </div>
+                <div class="col">
+                  <h5 class="mb-1">Automatyzacja bankowości w praktyce</h5>
+                  <div class="d-flex">
+                      <i class="fa-solid fa-circle fs-4 pe-3" style="color: #f5f5f5;"></i>
+                      <small class="text-muted">Steve Harris  |  27 marca 2023</small>
+                  </div>
+                </div>
+              </div>
+            <button class="btn btn-lg p-3 btn-outline-dark">
+              Zobacz więcej wpisów
+            </button>
+          </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
