--- a/figma.html
+++ b/figma.html
@@ -143,7 +143,6 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        </div>
                         <div class="m-3">
                             <h4>Automatyzacja procesów</h4>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -162,6 +161,7 @@
                                 aria-label="Slide 4"></button>
                             <button type="button" data-bs-target="#carouselControls" data-bs-slide-to="4"
                                 aria-label="Slide 5"></button>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -263,7 +263,7 @@
         <hr />
     </div>
     <!-- Fith section -->
-    <div class="container my-5">
+    <div class="container py-5">
         <div class="row align-items-center">
           <!-- Miniaturka wideo -->
           <div class="col-md-6 mb-4 mb-md-0">
@@ -274,19 +274,14 @@
                    alt="Podgląd wideo" 
                    style="border-radius: 12px;">
               <!-- Przycisk Play -->
-              <button class="btn position-absolute top-50 start-50 translate-middle"
-                      style="border-radius: 50%; 
-                             background-color: #fff; 
-                             width: 64px; 
-                             height: 64px; 
-                             box-shadow: 0 2px 8px rgba(0,0,0,0.2);"
+              <button class="btn position-absolute top-50 start-50 translate-middle play-button"
                       onclick="/* Tutaj akcja*/">
                 <i class="fa fa-play" style="font-size: 24px;"></i>
               </button>
             </div>
           </div>
           <!-- Tekst obok -->
-          <div class="col-md-6">
+          <div class="col-md-4">
             <h2>Poznaj system</h2>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
