--- a/figma.html
+++ b/figma.html
@@ -62,7 +62,7 @@
                     </li>
                 </ul>
                 <div class="d-flex ms-auto">
-                    <button class="btn btn-custom me-2" type="button">
+                    <button class="btn primary-btn me-2" type="button">
                         Załóż konto
                     </button>
                     <button class="btn btn-outline-dark" type="button">
@@ -84,7 +84,7 @@
                         eiusmod tempor incididunt.
                     </p>
                     <div class="d-flex gap-3 justify-content-center">
-                        <button class="btn btn-custom btn-lg btn-small-text px-4 py-3">
+                        <button class="btn primary-btn btn-lg btn-small-text px-4 py-3">
                             Załóż darmowe konto
                         </button>
                         <button class="btn btn-outline-dark btn-lg btn-small-text px-4 py-3">
@@ -113,6 +113,11 @@
                 <div class="col-md-6">
                     <div id="carouselControls" class="carousel slide">
                         <div class="carousel-inner">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls"
+                                data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
                             <div class="carousel-item active">
                                 <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
                                     class="d-block carousel-img" alt="..." />
@@ -133,11 +138,6 @@
                                 <img src="https://www.shutterstock.com/image-illustration/no-picture-available-placeholder-thumbnail-600nw-2179364083.jpg"
                                     class="d-block carousel-img" alt="..." />
                             </div>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselControls"
-                                data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
                             <button class="carousel-control-next" type="button" data-bs-target="#carouselControls"
                                 data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
@@ -291,9 +291,7 @@
                 <!-- Lewa kolumna: nagłówki i przycisk -->
                 <div class="col-md-6 mb-4 mb-md-0 my-5">
                     <h2>Zaufali nam liderzy branży finansowej</h2>
-                    <p class="fw-bold">
-                    <h4>Wypróbuj naszą platformę za darmo!</h4>
-                    </p>
+                        <h4 class="pt-2">Wypróbuj naszą platformę za darmo!</h4>
                     <p class="my-5">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.
